unpackaged/objects/CountryCodeMap__mdt.object
<CustomObject>
  <description>TFUS-000002404</description>
  <fields>
    <fullName>Campaign_Country__c</fullName>
    <label>Campaign Country</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country_Code_2_digit__c</fullName>
    <label>Country Code (2-digit)</label>
    <length>2</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country_Code_3_digit__c</fullName>
    <label>Country Code (3-digit)</label>
    <length>3</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country_Code_full__c</fullName>
    <label>Country Code (full)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <label>Country Code Map</label>
  <pluralLabel>Country Code Maps</pluralLabel>
</CustomObject>